concluído e  feito o teste.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <button id="button-stop">Stop</button>
   <button id="button-reset">Reset</button>
   </div> 
+  <script src="tempo.js"></script> 
 </body>
 </html>
 
